--- a/01-流式布局/05-mobile-jd/index.html
+++ b/01-流式布局/05-mobile-jd/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <!-- 引入我们首页的css样式 -->
     <link rel="stylesheet" href="./css/index.css">
-    <title>京东移动首页</title>
+    <title>京东移动端首页</title>
 </head>
 
 <body>
