--- a/02-flex布局/02-主轴元素排列方式.html
+++ b/02-flex布局/02-主轴元素排列方式.html
@@ -10,11 +10,13 @@
             display: flex;
             /* justify-content: flex-start; */
             /* justify-content: flex-end; */
-            /* justify-content: center; */
-            justify-content: space-around;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            /* justify-content: space-around; */
             /* justify-content: space-between; */
             /* 默认不换行，设置成换行 */
-            flex-wrap: wrap;
+            /* flex-wrap: wrap; */
             width: 800px;
             height: 600px;
             background-color: chartreuse;
@@ -33,11 +35,7 @@
         <span>1</span>
         <span>2</span>
         <span>3</span>
-        <span>3</span>
-        <span>3</span>
-        <span>3</span>
-        <span>3</span>
-        <span>3</span>
+
     </div>
 </body>
 
