--- a/02-flex布局/07-mobile-ctrip/index.html
+++ b/02-flex布局/07-mobile-ctrip/index.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <!-- 设置视口标签 -->
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0 ,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0 ">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport"
+        content="width=device-width, initial-scale=1.0 ,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0 "> -->
     <!-- 让IE浏览器运行最新的渲染模式下 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- 引入css初始化文件 -->
     <link rel="stylesheet" href="./css/normalize.css">
     <!-- 引入首页css样式 -->
     <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js"></script>
     <title>携程移动端首页</title>
 </head>
 
@@ -102,17 +104,100 @@
     </nav>
     <!-- 侧导航栏 -->
     <ul class="subnav-entry">
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-        <li>9</li>
-        <li>10</li>
+        <li>
+            <a href="javascript:;">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="javascript:;">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="javascript:;">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="javascript:;">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="javascript:;">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="javascript:;">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="javascript:;">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="javascript:;">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="javascript:;">
+                <span class="subnav-entry-icon"></span>
+                <span>电话费</span>
+            </a>
+        </li>
+        <li>
+            <a href="javascript:;">
+                <span class="subnav-entry-icon"></span>
+                <span>更多</span>
+            </a>
+        </li>
     </ul>
+    <!-- 商品栏 -->
+    <div class="sales-box">
+        <div class="sales-hd">
+            <h2>热门活动</h2>
+            <a href="javascript:;">获取更多福利</a>
+        </div>
+        <div class="sales-bd">
+            <div class="row">
+                <a href="javascript:;">
+                    <img src="./upload/pic1.jpg">
+                </a>
+                <a href="javascript:;">
+                    <img src="./upload/pic2.jpg">
+                </a>
+            </div>
+            <div class="row">
+                <a href="javascript:;">
+                    <img src="./upload/pic3.jpg">
+                </a>
+                <a href="javascript:;">
+                    <img src="./upload/pic4.jpg">
+                </a>
+            </div>
+            <div class="row">
+                <a href="javascript:;">
+                    <img src="./upload/pic5.jpg">
+                </a>
+                <a href="javascript:;">
+                    <img src="./upload/pic6.jpg">
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
