--- a/03-rem适配布局/08-mobile-SN/index.html
+++ b/03-rem适配布局/08-mobile-SN/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>苏宁移动端</title>
-    <link rel="stylesheet" href="../css/normalize.css">
-
+    <!-- 引入css初始化文件 -->
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
-    
+    <div class="search-content"></div>
 </body>
 
 </html>
