--- a/03-rem适配布局/08-mobile-SN/index.html
+++ b/03-rem适配布局/08-mobile-SN/index.html
@@ -12,7 +12,69 @@
 </head>
 
 <body>
-    <div class="search-content"></div>
+    <!-- 顶部搜索框 -->
+    <div class="search-content">
+        <a href="javascript:;" class="classify"></a>
+        <div class="search">
+            <form action="">
+                <input type="search" placeholder="厨卫保暖季 每千减百">
+            </form>
+        </div>
+        <a href="javascript:;" class="login">登录</a>
+    </div>
+    <!-- banner部分 -->
+    <div class="banner">
+        <img src="./upload/banner.gif">
+    </div>
+    <!-- ad广告部分 -->
+    <div class="ad">
+        <a href="javascript:;"><img src="./upload/ad1.gif" alt=""></a>
+        <a href="javascript:;"><img src="./upload/ad2.gif" alt=""></a>
+        <a href="javascript:;"><img src="./upload/ad3.gif" alt=""></a>
+    </div>
+    <!-- nav导航栏部分 -->
+    <nav>
+        <a href="javascript:;">
+            <img src="./upload/nav1.png">
+            <span>爆款手机</span>
+        </a>
+        <a href="javascript:;">
+            <img src="./upload/nav1.png">
+            <span>爆款手机</span>
+        </a>
+        <a href="javascript:;">
+            <img src="./upload/nav1.png">
+            <span>爆款手机</span>
+        </a>
+        <a href="javascript:;">
+            <img src="./upload/nav1.png">
+            <span>爆款手机</span>
+        </a>
+        <a href="javascript:;">
+            <img src="./upload/nav1.png">
+            <span>爆款手机</span>
+        </a>
+        <a href="javascript:;">
+            <img src="./upload/nav1.png">
+            <span>爆款手机</span>
+        </a>
+        <a href="javascript:;">
+            <img src="./upload/nav1.png">
+            <span>爆款手机</span>
+        </a>
+        <a href="javascript:;">
+            <img src="./upload/nav1.png">
+            <span>爆款手机</span>
+        </a>
+        <a href="javascript:;">
+            <img src="./upload/nav1.png">
+            <span>爆款手机</span>
+        </a>
+        <a href="javascript:;">
+            <img src="./upload/nav1.png">
+            <span>爆款手机</span>
+        </a>
+    </nav>
 </body>
 
 </html>
