--- a/04-bootstrap-响应式/03-bootstrap使用/04-栅格系统列排序.html
+++ b/04-bootstrap-响应式/03-bootstrap使用/04-栅格系统列排序.html
@@ -23,8 +23,12 @@
     <![endif]-->
     <style>
         [class^="col"] {
-            border: 1px solid purple;
             height: 50px;
+            background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+        }
+
+        .row {
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -32,15 +36,8 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
-                <!-- 列嵌套最好添加一个row，这样可以取消父元素的padding值，而且高度和父级一样高 -->
-                <div class="row">
-                    <div class="col-md-6">a</div>
-                    <div class="col-md-6">b</div>
-                </div>
-            </div>
-            <div class="col-md-4">2</div>
-            <div class="col-md-4">3</div>
+            <div class="col-md-4 col-md-push-8">左侧</div>
+            <div class="col-md-8 col-md-pull-4">右侧</div>
         </div>
     </div>
 </body>
