--- a/04-bootstrap-响应式/04-bootstrap-alibaixiu/index.html
+++ b/04-bootstrap-响应式/04-bootstrap-alibaixiu/index.html
@@ -21,27 +21,12 @@
     <script src="./bootstrap/js/html5shiv.js"></script>
     <script src="./bootstrap/js/respond.js"></script>
     <![endif]-->
-    <style>
-        [class^="col"] {
-            border: 1px solid purple;
-            height: 50px;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <!-- 列嵌套最好添加一个row，这样可以取消父元素的padding值，而且高度和父级一样高 -->
-                <div class="row">
-                    <div class="col-md-6">a</div>
-                    <div class="col-md-6">b</div>
-                </div>
-            </div>
-            <div class="col-md-4">2</div>
-            <div class="col-md-4">3</div>
-        </div>
+        123
     </div>
 </body>
 
