--- a/04-bootstrap-响应式/03-bootstrap使用/03-栅格系统列偏移.html
+++ b/04-bootstrap-响应式/03-bootstrap使用/03-栅格系统列偏移.html
@@ -18,13 +18,17 @@
     <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
     <!-- [if lt IE 9]><![endif]是IE中的条件注释 -->
     <!--[if lt IE 9]>
-    <script src="./js/html5shiv.js"></script>
-    <script src="./js/respond.js"></script>
+    <script src="./bootstrap/js/html5shiv.js"></script>
+    <script src="./bootstrap/js/respond.js"></script>
     <![endif]-->
     <style>
         [class^="col"] {
             border: 1px solid purple;
             height: 50px;
+        }
+
+        .row {
+            margin-top: 10px;
         }
     </style>
 </head>
